--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,18 @@
 .read-the-docs {
   color: #888;
 }
+
+img {
+  height: 100px;
+  width: 100px;
+}
+
+.pokemon {
+  border-color: blue;
+  border-style: solid;
+}
+
+.images {
+  display: flex;
+  gap: 10px;
+}
