--- a/src/App.css
+++ b/src/App.css
@@ -49,9 +49,15 @@ img {
 .images {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
+  gap: 20px;
 }
 
 .scoreboard {
   border: solid;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 200px;
 }
