--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,8 @@ img {
 
 .images {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 20px;
 }
 
